--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ install:
 ### Check generation changes, build and test
 ###
 before_script:
+  - make lint
   - while ! make build; do sleep 1; done
   - while ! make test; do sleep 1; done
 
